@@ -73,6 +73,7 @@ const PQ_SAVE_ACTION          = 57;
 const SCROLL_TO_DISC_ACTION   = 58;
 const PQ_TOGGLE_VIEW_ACTION   = 59;
 const TRACK_SORTS_ACTION      = 60;
+const PLAY_SHUFFLE_ACTION     = 61;
 
 
 const HIDE_FOR_PARTY = new Set([PLAY_ACTION, PLAY_ALBUM_ACTION, PLAY_ALL_ACTION, INSERT_ACTION, MORE_ACTION, MORE_LIB_ACTION, RENAME_ACTION, REMOVE_ACTION, EDIT_ACTION, ADD_FAV_ACTION, DELETE_ACTION, ADD_TO_FAV_ACTION, REMOVE_FROM_FAV_ACTION, SELECT_ACTION, RATING_ACTION, ADD_FAV_FOLDER_ACTION, DELETE_FAV_FOLDER_ACTION, MOVE_FAV_TO_PARENT_ACTION, UNSUB_PODCAST_ACTION, MOVE_HERE_ACTION, INSERT_ALL_ACTION, ADD_TO_PLAYLIST_ACTION, REMOVE_DUPES_ACTION, ADV_SEARCH_ACTION, SAVE_VLIB_ACTION, DOWNLOAD_ACTION, PLAY_DISC_ACTION, PLAY_PLAYLIST_ACTION, PQ_SORT_ACTION, PLAYLIST_SORT_ACTION, PQ_SAVE_ACTION]);
@@ -145,13 +146,15 @@ var ACTIONS=[
     {cmd:"pq-save",      icon:"save"},
     {cmd:"disc-scroll",  svg:"arrow-circle"},
     {cmd:"pq-style",     icon:"album"},
-    {cmd:"trksort",      icon:"sort_by_alpha"}
+    {cmd:"trksort",      icon:"sort_by_alpha"},
+    {cmd:"play-shuffle", svg:"play-shuffle"}
 ];
 
 function updateActionStrings() {
     ACTIONS[PLAY_ACTION].title=ACTIONS[PLAY_ALL_ACTION].title=i18n("Play now");
     ACTIONS[PLAY_ACTION].skey=ACTIONS[PLAY_ALL_ACTION].key=LMS_PLAY_KEYBOARD;
     ACTIONS[PLAY_ALBUM_ACTION].title=i18n("Play album starting at track");
+    ACTIONS[PLAY_SHUFFLE_ACTION].title=i18n("Play shuffled");
     ACTIONS[ADD_ACTION].title=ACTIONS[ADD_ALL_ACTION].title=i18n("Append to queue");
     ACTIONS[ADD_ACTION].skey=ACTIONS[ADD_ALL_ACTION].key=LMS_APPEND_KEYBOARD;
     ACTIONS[ADD_RANDOM_ALBUM_ACTION].title=i18n("Append random album to queue");
