@@ -25,7 +25,7 @@ sub page {
 sub prefs {
 	return ($prefs, 'composergenres', 'conductorgenres', 'bandgenres', 'showComposer', 'showConductor', 'showBand', 'password', 'respectFixedVol',
 	        'showAllArtists', 'artistFirst', 'allowDownload', 'commentAsDiscTitle', 'showComment', 'pagedBatchSize', 'noArtistFilter',
-			'releaseTypeOrder', 'genreImages', 'touchLinks', 'yearInSub');
+			'releaseTypeOrder', 'genreImages', 'touchLinks', 'yearInSub', 'playShuffle');
 }
 
 1;
